--- a/scss/libraries.scss
+++ b/scss/libraries.scss
@@ -14,7 +14,6 @@
   .tablesaw-stack {
     td, th {
     	margin:20px 0;
-    	padding:20px 0;
       .tablesaw-cell-label {
         margin-right: 1em;
       }
